opam-version: "2.0"
version: "v0.16.1"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/ppx_inline_test"
bug-reports: "https://github.com/janestreet/ppx_inline_test/issues"
dev-repo: "git+https://github.com/janestreet/ppx_inline_test.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/ppx_inline_test/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml"    {>= "4.14.0"}
  "base"     {>= "v0.16" & < "v0.17"}
  "time_now" {>= "v0.16" & < "v0.17"}
  "dune"     {>= "3.8.0"}
  "ppxlib"   {>= "0.28.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "Syntax extension for writing in-line tests in ocaml code"
description: "
Part of the Jane Street's PPX rewriters collection.
"
